unpackaged/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <label>Custom Error Log</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>