unpackaged/main/default/objects/Error_Log__c/fields/Error_Record__c.field-meta.xml
<CustomField>
    <fullName>Error_Record__c</fullName>
    <label>Error Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>