unpackaged/main/default/objects/Error_Log__c/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <description>to store source from where error caused</description>
    <label>Error Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>