unpackaged/main/default/objects/Error_Log__c/fields/Error_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Error_Source_Name__c</fullName>
    <label>Error Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>